# winch-optimization

./: .gitignore  README.md  Winch.drawio  WinchOptimization-DerivativeMethod-Casadi-Full.ipynb  WinchOptimization.ipynb  pyproject.toml  winch_optimization_marimo.py
